@@ -1,3 +1,12 @@
+2026-01-29T01:10:14Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21461689967 # 861
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-29
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 981 1461 / 984 1464
+* notice: next accum: outdated-unq outdated-all / unq all: 984 1464 / 986 1466
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-12-16 2025-12-17 2025-12-18 2025-12-19 2025-12-20 2025-12-21 2025-12-22 2025-12-23 2025-12-24 2025-12-25 2025-12-26 2025-12-27 2025-12-28 2025-12-29] / [2026-01-16 2026-01-18]
+
 2025-12-31T01:39:31Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20609914737 # 855
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-31
